# logcompact

./: .gitignore  .release-please-config.json  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  PROBLEM_MATCHERS.md  README.md  RELEASING.md  SECURITY.md  deny.toml  dist-workspace.toml  hawk.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: benchmark.yml  ci.yml  dependency-review.yml  fuzz.yml  publish.yml  release-assets.yml  release-please.yml  security.yml
crates/logcompact/: AGENTS.md  Cargo.toml  README.md
crates/logcompact-builtins/: AGENTS.md  Cargo.toml  README.md
crates/logcompact-builtins/benches/: streaming.rs
crates/logcompact-builtins/examples/: reduce.rs
crates/logcompact-builtins/src/: finalize.rs  lib.rs  model.rs  problem_matcher.rs  redaction.rs  streaming.rs  test_failures.rs  test_log.rs  text.rs
crates/logcompact-builtins/src/diagnostics/: TESTCASES.md  arbitration.rs  common.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  protobuf.rs  python.rs  rust.rs  typescript.rs
crates/logcompact-builtins/src/diagnostics/cpp/: compiler.rs  linker.rs  mod.rs
crates/logcompact-builtins/src/diagnostics/cpp/testcases/compiler/: gcc-error.yaml  msvc-warning.yaml
crates/logcompact-builtins/src/diagnostics/cpp/testcases/linker/: apple-undefined-symbol.yaml  gnu-undefined-reference.yaml
crates/logcompact-builtins/src/diagnostics/go/: compiler.rs  mod.rs
crates/logcompact-builtins/src/diagnostics/go/testcases/compiler/: undefined-name.yaml  warning.yaml
crates/logcompact-builtins/src/diagnostics/java/: javac.rs  junit.rs  mod.rs
crates/logcompact-builtins/src/diagnostics/java/testcases/javac/: cannot-find-symbol.yaml  deprecation-warning.yaml
crates/logcompact-builtins/src/diagnostics/java/testcases/junit/: application-frame.yaml  caused-by.yaml
crates/logcompact-builtins/src/diagnostics/javascript/: mod.rs  node.rs  swc.rs
crates/logcompact-builtins/src/diagnostics/javascript/testcases/node/: application-frame.yaml  leading-location.yaml
crates/logcompact-builtins/src/diagnostics/javascript/testcases/swc/: parser-error.yaml  plugin-context.yaml
crates/logcompact-builtins/src/diagnostics/protobuf/: mod.rs  protoc.rs
crates/logcompact-builtins/src/diagnostics/protobuf/testcases/protoc/: import-warning.yaml  unknown-type.yaml
crates/logcompact-builtins/src/diagnostics/python/: mod.rs  pytest.rs  traceback.rs
crates/logcompact-builtins/src/diagnostics/python/testcases/pytest/: assertion-error.yaml  native-traceback.yaml  parametrized-exception.yaml  rewritten-assertion.yaml
crates/logcompact-builtins/src/diagnostics/python/testcases/traceback/: runtime-error.yaml  syntax-error.yaml
crates/logcompact-builtins/src/diagnostics/rust/: mod.rs  rustc.rs
crates/logcompact-builtins/src/diagnostics/rust/testcases/rustc/: missing-location.yaml  type-mismatch.yaml
crates/logcompact-builtins/src/diagnostics/typescript/: mod.rs  tsc.rs
crates/logcompact-builtins/src/diagnostics/typescript/testcases/tsc/: ansi-crlf.yaml  parenthesized-warning.yaml  pretty-error.yaml
crates/logcompact-builtins/tests/: diagnostic_testcases.rs  streaming_equivalence.rs
crates/logcompact-core/: AGENTS.md  Cargo.toml  README.md
crates/logcompact-core/benches/: core.rs
crates/logcompact-core/src/: finalize.rs  lib.rs  model.rs  session.rs  text.rs
crates/logcompact/src/: lib.rs  main.rs
crates/logcompact/tests/: cli.rs
crates/tokencompact/: AGENTS.md  Cargo.toml  README.md
crates/tokencompact-builtins/: AGENTS.md  Cargo.toml  README.md
crates/tokencompact-builtins/benches/: streaming.rs
crates/tokencompact-builtins/examples/: reduce.rs
crates/tokencompact-builtins/src/: finalize.rs  lib.rs  model.rs  redaction.rs  streaming.rs  test_log.rs  text.rs
crates/tokencompact-builtins/src/diagnostics/: cpp.rs  javascript.rs  python.rs  rust.rs  typescript.rs
crates/tokencompact-builtins/tests/: streaming_equivalence.rs
crates/tokencompact-core/: AGENTS.md  Cargo.toml  README.md
crates/tokencompact-core/src/: model.rs  policy.rs  session.rs  text.rs
crates/tokencompact/src/: lib.rs  main.rs
crates/tokencompact/tests/: cli.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: logcompact.rs  tokencompact.rs
scripts/: check-boundary.py  check-release-please-config.py  check-workflow-security.py  install-cargo-dist.ps1  install-cargo-dist.sh  publish.sh
