[workspace]
members = [
    "crates/tokencompact-core",
    "crates/tokencompact-builtins",
    "crates/tokencompact",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/tokencompact"
homepage = "https://github.com/ewhauser/tokencompact"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
tokencompact-core = { path = "crates/tokencompact-core", version = "0.1.0" }
tokencompact-builtins = { path = "crates/tokencompact-builtins", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
criterion = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
