[workspace]
members = [
    "crates/logcompact-core",
    "crates/logcompact-builtins",
    "crates/logcompact",
]
resolver = "3"

[workspace.package]
version = "0.3.3"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/logcompact"
homepage = "https://github.com/ewhauser/logcompact"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.dependencies]
logcompact-core = { path = "crates/logcompact-core", version = "0.3.3" }
logcompact-builtins = { path = "crates/logcompact-builtins", version = "0.3.3" }
clap = { version = "4", features = ["derive"] }
criterion = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = { version = "0.0.29", default-features = false, features = ["deserialize"] }
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
