[package]
name = "logcompact-fuzz"
version = "0.0.0"
publish = false
edition = "2024"
rust-version = "1.94.1"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
logcompact-builtins = { path = "../crates/logcompact-builtins" }

[[bin]]
name = "logcompact"
path = "fuzz_targets/logcompact.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]

[lints.rust]
unsafe_code = "deny"
