[package]
name = "logcompact-builtins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic compiler, linter, runtime, and test log parsers"
documentation = "https://docs.rs/logcompact-builtins"
readme = "README.md"
keywords = ["diagnostics", "logs", "parser", "ci", "llm"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[features]
test-support = []

[dependencies]
logcompact-core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true
serde-saphyr.workspace = true

[[bench]]
name = "streaming"
harness = false
