[package]
name = "logcompact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Compact noisy logs into token-efficient diagnostics"
documentation = "https://docs.rs/logcompact"
readme = "README.md"
keywords = ["diagnostics", "logs", "cli", "ci", "llm"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
clap.workspace = true
logcompact-builtins.workspace = true
serde_json.workspace = true

[[bin]]
name = "logcompact"
path = "src/main.rs"
