[package]
name = "tokencompact-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deterministic streaming state machine for bounded log reduction"
documentation = "https://docs.rs/tokencompact-core"
readme = "README.md"
keywords = ["diagnostics", "logs", "parser", "ci", "llm"]
categories = ["development-tools", "parsing"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
